...

object SmokeTestTags {
    const val NAVIGATION_BACK_BUTTON = "navigation_back_button"
    const val NAVIGATION_TOP_BAR_TITLE = "navigation_top_bar_title"

    const val AUTH_TITLE = "auth_title"
    const val AUTH_LOGIN_INPUT = "auth_login_input"
    const val AUTH_PASSWORD_INPUT = "auth_password_input"
    const val AUTH_LOGIN_BUTTON = "auth_login_button"
    const val AUTH_REGISTER_BUTTON = "auth_register_button"
    const val AUTH_LOGIN_LOADER = "auth_login_loader"
    const val AUTH_REGISTER_LOADER = "auth_register_loader"

    const val SUBSCRIPTIONS_TITLE = "subscriptions_title"
    const val SUBSCRIPTIONS_LINK_INPUT = "subscriptions_link_input"
    const val SUBSCRIPTIONS_TAGS_INPUT = "subscriptions_tags_input"
...
